group 'home'
version '1.0-SNAPSHOT'
apply plugin: 'java'
apply plugin: 'application'


sourceCompatibility = '1.8'
mainClassName='home.spring.vertx.sync.Starter'
repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven { url "http://repo.spring.io/libs-snapshot" }
}
configurations {
    quasar
}

dependencies {

    compile "org.projectlombok:lombok:1.16.4"
    compile "org.springframework.boot:spring-boot-starter:1.3.5.RELEASE"
    compile "mysql:mysql-connector-java:5.1.36"
    compile "io.vertx:vertx-core:3.2.1"
    compile "io.vertx:vertx-web:3.2.1"
    compile "co.paralleluniverse:comsat-jdbc:0.7.0"
    compile "com.zaxxer:HikariCP:2.4.6"
    compile 'io.vertx:vertx-sync:3.2.1'
    compile "co.paralleluniverse:quasar-core:0.7.5:jdk8"
    // quasar instrumentation
    quasar "co.paralleluniverse:quasar-core:0.7.5:jdk8"
    //testing
    testCompile 'junit:junit:4.11'
}

run {
    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}  " +
//            "-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 " +
            "-Xms2G -Xmx2G -server " +
            "-XX:+UseNUMA " +
            "-XX:+UseParallelGC " +
            "-XX:+AggressiveOpts " +
            "-Dvertx.disableWebsockets=true " +
            "-Dvertx.flashPolicyHandler=false " +
            "-Dvertx.threadChecks=false " +
            "-Dvertx.disableContextTimings=true " +
            "-Dvertx.disableTCCL=true"
}